@@ -1,6 +1,7 @@
 Revision history for Perl extension Alien::wxWidgets.
 
 0.56  TBR
+    - add propgrid ribbon webview library names
 
 0.55  Tue Feb 28 2012
     - Correctly interpret boolean option = 1 as 'yes' 
